--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 #points{
   font-size:1.5rem;
-  color:blue;
+  color:cyan;
 }
 #computerScore{
   font-size:1.5rem;
@@ -138,5 +138,6 @@ body {
   .choice img { width: 74px; height: 74px; }
   .choices { gap: 10px; }
 }
+
 
 
