--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   padding: 10px;
   border-radius: 5px;
   border: none;
+  cursor: pointer;
 }
 #newGame:hover{
   background-color: hsl(139, 52%, 50%);
@@ -153,5 +154,6 @@ body {
   .choice img { width: 74px; height: 74px; }
   .choices { gap: 10px; }
 }
+
 
 
